[project]
name = "AloneBot"
version = "1.0.0a"
description = "A personal bot."
license = "AGPL 3.0"
readme = "README.md"

[tool.black.dependencies]
python = "^3.9"

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
combine_as_imports = true
combine_star = true
line_length = 125
profile = "black"

[tool.pyright]
pythonversion = "^3.9"
typeCheckingMode = "strict"
reportImportCycles = false
reportUnusedImport = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportIncompatibleMethodOverride = "none"